# MLops-image-classification

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  train.dockerfile
docs/: mkdocs.yml
docs/docs/: index.md
outputs/2025-01-19/20-28-39/.hydra/: config.yaml  hydra.yaml
outputs/2025-01-19/20-30-03/.hydra/: hydra.yaml
real_time_species_detection_and_classification_system/: # environment.yml  __init__.py  dataset.py  features.py  plots.py
real_time_species_detection_and_classification_system/modeling/: my_predictions.csv  predict.py  train.py
real_time_species_detection_and_classification_system/modeling/conf/: train_conf.yaml
