[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "real_time_species_detection_and_classification_system"
version = "0.0.1"
description = "We aim to build an automated system for real-time detection and classification of animal and plant species using Deep Learning and ML-Ops tools."
authors = [
  { name = "Julia, Javier, Vidisha" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["real_time_species_detection_and_classification_system"]
force_sort_within_sections = true
